--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/ThomasVandermeersch/Mandelbrot#readme",
   "dependencies": {
+    "delay": "^5.0.0",
     "express": "^4.17.1",
+    "http": "^0.0.1-security",
     "nodemon": "^2.0.15"
   }
 }
