--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   "dependencies": {
     "delay": "^5.0.0",
     "express": "^4.17.1",
+    "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "pug": "^3.0.2",
+    "socket.io": "^4.4.0"
   }
 }
