--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js",
+    "start": "nodemon Mandelbrot_compute/index.js",
     "startLB": "nodemon loadbalancer.js"
   },
   "repository": {
