--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon Mandelbrot_compute/index.js",
-    "startLB": "nodemon loadbalancer.js"
+    "startCompute": "nodemon Mandelbrot_compute/index.js",
+    "startLB": "nodemon loadbalancer.js",
+    "startServer": "nodemon httpServer.js",
+    "start": "concurrently --kill-others \"npm run startCompute\" \"npm run startLB\" \"npm run startServer\""
   },
   "repository": {
     "type": "git",
@@ -26,5 +28,8 @@
     "nodemon": "^2.0.15",
     "pug": "^3.0.2",
     "socket.io": "^4.4.0"
+  },
+  "devDependencies": {
+    "concurrently": "^7.0.0"
   }
 }
